--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "zksync-web3": "^0.14.3"
   },
   "scripts": {
-    "prepare": "node ./.setup.js",
+    "prepare": "node ./.setup.js && npm run build",
     "compile": "hardhat compile",
     "lint": "eslint \"**/*.{js,ts}\" && solhint src/**/*.sol",
     "lint:fix": "eslint --fix \"**/*.{js,ts}\" && solhint --fix src/**/*.sol",
